--- a/style.css
+++ b/style.css
@@ -9,11 +9,19 @@ body {
     color: rgb(97, 15, 15);
 }
 
+.main-container {
+   width: 50%;
+   height: 50%;
+   margin: 10%;
+   
+}
+
 .img-container {
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     margin: 20px;
+    position: fixed;
 }
 
 h1 {
@@ -32,6 +40,10 @@ h1 {
     border-radius: 20px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     text-align: center;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .form-container input[type="text"],
